--- a/test/fixtures/messages.yml
+++ b/test/fixtures/messages.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: messages
+#
+#  id         :integer          not null, primary key
+#  content    :string(255)
+#  person_id  :integer
+#  sent_at    :datetime
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
