--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -2,11 +2,18 @@
 #
 # Table name: people
 #
-#  id         :integer          not null, primary key
-#  name       :string(255)
-#  email      :string(255)
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id              :integer          not null, primary key
+#  name            :string(255)
+#  cpf             :string(255)
+#  birthdate       :date
+#  phone_area_code :string(255)
+#  phone_number    :string(255)
+#  gender          :string(1)
+#  picture         :string(255)
+#  apartment_id    :integer
+#  user_id         :integer
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
